--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<div id="data"></div>
+	<canvas id="sim" width="1280" height="720" style="border: 1px solid #000;">
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/jquery-min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
