--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 	<canvas id="sim" width="1280" height="720" style="border: 1px solid #000;">
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/jquery-min.js"></script>
+	<script type="text/javascript" src="js/simulation.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
