--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
 	<canvas id="outGraph" width="400" height="200" style="border: 1px solid #000;"></canvas>
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript" src="js/jquery-min.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.js"></script>
+	// <script type="text/javascript" src="js/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/d3.min.js"></script>
 	<script type="text/javascript" src="js/simulation.js"></script>
+	<script type="text/javascript" src="js/chart.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
